# siglab

./: .coveragerc  .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  AUDIT.md  CONTRIBUTING.md  CRITICAL_AUDIT.md  DEEP_AUDIT.md  DEEP_OPTIMIZATION_AUDIT.md  DESIGN.md  Dockerfile  E6_REPORT.md  EVALUATION_REPORT.md  FINAL_BENCHMARK.md  LICENSE  LIVE_SYSTEM_REPORT.md  OPTIMIZATION_BLUEPRINT.md  PATH_TO_10K.md  PRODUCT.md  README.md  ULTIMATE_AUDIT.md  ULTRA_AUDIT.md  VERIFIED_PLAN.md  _fix_multi_stmt.py  _sosovalue_decision_report.md  config.example.json  coverage.json  coverage_full.json  coverage_full2.json  coverage_run.json  coverage_unit.json  git-ls-files-output.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dashboard.txt  requirements.txt  sosovalue_api_schema.json  (+2 more)
.github/: pull_request_template.md
agent_workspace/: A1_X5_profile_noop_report.md  BRUTAL_AUDIT.md  audit_FINAL_VERDICT.md  audit_P1_cli_surfaces.md  audit_P1_model_bruteforce.md  audit_P1_openrouter_curl.md  audit_bai_official.md  audit_cli.md  audit_risk_guarded.md  audit_sodex_official.md  audit_sosovalue_official.md  audit_tui_test_surface.md  baseline_metrics.md  baseline_metrics_v2.md  conftest_doc_review_iter17.md  contracts_boundaries_iter17.md  critic_tui_dataflow.md  critic_tui_screens.md  critic_tui_ux.md  e2e_results.md  iter10_final_report.md  iter11_final_report.md  iter12_final_report.md  iter13_final_report.md  iter14_final_report.md  iter15_final_report.md  iter16_final_report.md  iter16_final_report_v2.md  iter17_final_report.md  iter1_final_report.md  iter2_final_report.md  iter4_final_report.md  iter5_perf_metrics.md  iter6_final_report.md  iter7_final_report.md  iter8_final_report.md  iter9_final_report.md  plan_C_curl_live_tests.md  plan_C_pytest_live_marker.md  plan_C_skip_to_live_migration.md  (+24 more)
api/: index.py
docs/: access-and-testnet-plan.md  buildathon-readiness-audit.md  demo-gap-report.md  demo-script.md  doc-truth-gap-map.md  iter18-final-report.md  iter18-v2-report.md  iter19-final-report-v3.md  iter19-final-report.md  iter20-final-report.md  loop-supervision.md  module-cli.md  module-dashboard.md  module-data-pipeline.md  module-evaluation.md  module-live-boundary.md  module-orchestration.md  module-paper-trading.md  module-risk-guardian.md  module-testing.md  module-tui-app.md  product-flow-validation.md  production-hardening.md  provider-routing.md  refactor-correction-report.md  rich-formatting-strategy.md  skills-activation.md  sodex-api-surface.yaml  sosovalue-api-surface.yaml  sosovalue-coverage-gap-report.md  sosovalue-ecosystem-surface.yaml  tui-design-accessibility-audit.md  tuning-guide.md  wayfinder-comparison-gap-map.md
local:/: dash-plan.md
mutable/: family_lab.yaml  feature_lab.dsl  feature_lab.yaml  graph_lab.yaml  research_notes.md
scripts/: detect_originals.py  probe_bai_models.py  profile_siglab.py  quickstart.sh  record_demo.sh  tmux_display_audit.py
sessions/: 02c4f88c5069.json  09a8253496f4.json  09d5188f3428.json  0aa4be583998.json  0c45c9fa0dca.json  0e46597e9516.json  1325c299c063.json  164eb8d63f8e.json  19448f03e31c.json  1d4c90d64b6c.json  1dc6eb89c3d4.json  2405331be657.json  24837042b0bf.json  2c16f8c884f5.json  2d8edbb278d7.json  2dc11257d25a.json  304d61e8ff0b.json  322a2e971732.json  37498b74087f.json  37b0d0f83f63.json  393fada9b37f.json  39d239103664.json  (+84 more)
siglab/: cli.py  (+20 more)
(+786 files in other folders)
