[tool.poetry]
name = "siglab"
version = "0.1.0"
description = "On-chain signal discovery loop powered by SoSoValue and SoDEX"
authors = ["SigLab Builder"]
license = "MIT"
readme = "README.md"
packages = [{ include = "siglab" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
certifi = "^2025.11.12"
websockets = "^15.0.1"
numpy = "^1.26.0"
pandas = "^2.2.0"
pyarrow = "^20.0.0"
pyyaml = "^6.0.2"
optuna = "^4.5.0"
# SoSoValue API client — install separately or via pip

[tool.poetry.scripts]
siglab = "siglab.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)"
]
