[tool.poetry]
name = "siglab"
version = "0.1.0"
description = "On-chain signal discovery loop powered by SoSoValue and SoDEX"
authors = ["SigLab Builder"]
license = "MIT"
readme = "README.md"
packages = [{ include = "siglab" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
anthropic = "^0.60.0"
certifi = "^2025.11.12"
websockets = "^15.0.1"
numpy = "^1.26.0"
pandas = "^2.2.0"
pyarrow = "^20.0.0"
pyyaml = "^6.0.2"
optuna = "^4.5.0"
# SoSoValue API client — install separately or via pip
pydantic = "^2.13.4"
fastapi = "^0.136.3"
uvicorn = "^0.48.0"
textual = "^8.2.7"
rich = "^15.0.0"

[tool.poetry.scripts]
siglab = "siglab.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-xdist (>=3.6.0,<4.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
    "respx (>=0.21.1,<0.22.0)",
    "coverage (>=7.6.0,<8.0.0)"
]

dashboard = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

